<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="40dp"
    android:padding="16dp">


    <Button
        android:id="@+id/backButton"
        android:layout_width="58dp"
        android:layout_height="43dp"
        android:layout_marginStart="4dp"
        android:text="@string/close" />

    <TextView
        android:id="@+id/calorieInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daily_calorie_needs"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/shoppingListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shopping_list"/>

    <ListView
        android:id="@+id/recipeListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp" />



</LinearLayout>

